# sql-to-text

./: .gitignore  CLAUDE.md  LICENSE  README.md  evaluate_giga.py  evaluate_models.ipynb  evaluate_qwen.py  evaluation_results.csv  main.py  pyproject.toml  requirements.txt  sql_to_text_colab.ipynb  train_sql_to_text.ipynb  train_sql_to_text.py
