[project]
name = "sql-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=0.27.0",
    "bitsandbytes>=0.42.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "tqdm>=4.65.0",
    "sacrebleu>=2.0.0",
    "sentence-transformers>=2.0.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "protobuf>=6.33.5",
    "gigachat>=0.2.0",
]
